Apply linter suggestions